@@ -38,7 +38,6 @@
  * Version 2 license, then the option applies only if the new code is
  * made subject to such option by the copyright holder.
  */
-
 package org.netbeans.modules.cnd.makeproject.api.configurations;
 
 import java.beans.PropertyEditor;
@@ -59,24 +58,22 @@ import org.openide.nodes.Sheet;
 import org.openide.util.NbBundle;
 
 public class ItemConfiguration implements ConfigurationAuxObject {
+
     private boolean needSave = false;
-    
     private Configuration configuration;
     private Item item;
-    
     // General
     private BooleanConfiguration excluded;
     private int tool = -1;
-    
     // Tools
     private CustomToolConfiguration customToolConfiguration;
     private CCompilerConfiguration cCompilerConfiguration;
     private CCCompilerConfiguration ccCompilerConfiguration;
     private FortranCompilerConfiguration fortranCompilerConfiguration;
+    private AssemblerConfiguration assemblerConfiguration;
 
     // cached id of item
 //    private String id;
-    
     public ItemConfiguration(Configuration configuration, Item item) {
         // General
         this.configuration = configuration;
@@ -87,20 +84,21 @@ public class ItemConfiguration implements ConfigurationAuxObject {
         //cCompilerConfiguration = new CCompilerConfiguration(((MakeConfiguration)configuration).getBaseDir(), item.getFolder().getFolderConfiguration(configuration).getCCompilerConfiguration());
         //ccCompilerConfiguration = new CCCompilerConfiguration(((MakeConfiguration)configuration).getBaseDir(), item.getFolder().getFolderConfiguration(configuration).getCCCompilerConfiguration());
         //fortranCompilerConfiguration = new FortranCompilerConfiguration(((MakeConfiguration)configuration).getBaseDir(), ((MakeConfiguration)configuration).getFortranCompilerConfiguration());
-        
+
         // This is side effect of lazy configuration. We should init folder configuration
         // TODO: remove folder initialization. Folder should be responsible for it
         item.getFolder().getFolderConfiguration(configuration);
 
         clearChanged();
     }
-    
+
     public boolean isCompilerToolConfiguration() {
         return getTool() == Tool.CCompiler ||
                 getTool() == Tool.CCCompiler ||
-                getTool() == Tool.FortranCompiler;
+                getTool() == Tool.FortranCompiler ||
+                getTool() == Tool.Assembler;
     }
-    
+
     public BasicCompilerConfiguration getCompilerConfiguration() {
         if (getTool() == Tool.CCompiler) {
             return getCCompilerConfiguration();
@@ -108,43 +106,45 @@ public class ItemConfiguration implements ConfigurationAuxObject {
             return getCCCompilerConfiguration();
         } else if (getTool() == Tool.FortranCompiler) {
             return getFortranCompilerConfiguration();
+        } else if (getTool() == Tool.Assembler) {
+            return getAssemblerConfiguration();
         } else {
             assert false;
         }
         return null;
     }
-    
+
     public Configuration getConfiguration() {
         return configuration;
     }
-    
+
     public void setConfiguration(Configuration configuration) {
         this.configuration = configuration;
     }
-    
+
     public Item getItem() {
         return item;
     }
-    
+
     private void setItem(Item item) {
         if (this.item != item) {
             this.item = item;
             this.needSave = true;
 //            this.id = null;
-            //this.tool = item.getDefaultTool();
+        //this.tool = item.getDefaultTool();
         }
     }
-    
+
     // General
     public BooleanConfiguration getExcluded() {
         return excluded;
     }
-    
+
     public void setExcluded(BooleanConfiguration excluded) {
         this.excluded = excluded;
         needSave = true;
     }
-    
+
     // Tool
     public void setTool(String name) {
 //        if (genericName != null) {
@@ -153,9 +153,11 @@ public class ItemConfiguration implements ConfigurationAuxObject {
 //        }
         setTool(Tool.getTool(name));
     }
+
     public void setTool(int tool) {
         this.tool = tool;
     }
+
     public int getTool() {
         if (tool == -1) {
             tool = item.getDefaultTool();
@@ -166,85 +168,98 @@ public class ItemConfiguration implements ConfigurationAuxObject {
 //        CompilerSet set = CompilerSetManager.getDefault(((MakeConfiguration)configuration).getDevelopmentHost().getName()).getCompilerSet(((MakeConfiguration)configuration).getCompilerSet().getValue());
 //        return set.getTool(getTool()).getName();
 //    }
+
     protected String[] getToolNames() {
 //        CompilerSet set = CompilerSetManager.getDefault(((MakeConfiguration)configuration).getDevelopmentHost().getName()).getCompilerSet(((MakeConfiguration)configuration).getCompilerSet().getValue());
 //        return set.getToolGenericNames();
         return Tool.getCompilerToolNames();
     }
-    
+
     // Custom Tool
     public void setCustomToolConfiguration(CustomToolConfiguration customToolConfiguration) {
         this.customToolConfiguration = customToolConfiguration;
     }
-    
+
     public synchronized CustomToolConfiguration getCustomToolConfiguration() {
         if (customToolConfiguration == null) {
             customToolConfiguration = new CustomToolConfiguration();
         }
         return customToolConfiguration;
     }
-    
+
     // C Compiler
     public void setCCompilerConfiguration(CCompilerConfiguration cCompilerConfiguration) {
         this.cCompilerConfiguration = cCompilerConfiguration;
     }
-    
+
     public synchronized CCompilerConfiguration getCCompilerConfiguration() {
         if (cCompilerConfiguration == null) {
             FolderConfiguration folderConfiguration = item.getFolder().getFolderConfiguration(configuration);
             if (folderConfiguration != null) {
-                cCompilerConfiguration = new CCompilerConfiguration(((MakeConfiguration)configuration).getBaseDir(), folderConfiguration.getCCompilerConfiguration());
+                cCompilerConfiguration = new CCompilerConfiguration(((MakeConfiguration) configuration).getBaseDir(), folderConfiguration.getCCompilerConfiguration());
             } else {
-                cCompilerConfiguration = new CCompilerConfiguration(((MakeConfiguration)configuration).getBaseDir(), null);
+                cCompilerConfiguration = new CCompilerConfiguration(((MakeConfiguration) configuration).getBaseDir(), null);
             }
         }
         return cCompilerConfiguration;
     }
-    
+
     // CC Compiler
     public void setCCCompilerConfiguration(CCCompilerConfiguration ccCompilerConfiguration) {
         this.ccCompilerConfiguration = ccCompilerConfiguration;
     }
-    
+
     public synchronized CCCompilerConfiguration getCCCompilerConfiguration() {
         if (ccCompilerConfiguration == null) {
             FolderConfiguration folderConfiguration = item.getFolder().getFolderConfiguration(configuration);
             if (folderConfiguration != null) {
-                ccCompilerConfiguration = new CCCompilerConfiguration(((MakeConfiguration)configuration).getBaseDir(), folderConfiguration.getCCCompilerConfiguration());
+                ccCompilerConfiguration = new CCCompilerConfiguration(((MakeConfiguration) configuration).getBaseDir(), folderConfiguration.getCCCompilerConfiguration());
             } else {
-                ccCompilerConfiguration = new CCCompilerConfiguration(((MakeConfiguration)configuration).getBaseDir(), null);
+                ccCompilerConfiguration = new CCCompilerConfiguration(((MakeConfiguration) configuration).getBaseDir(), null);
             }
         }
         return ccCompilerConfiguration;
     }
-    
+
     // Fortran Compiler
     public void setFortranCompilerConfiguration(FortranCompilerConfiguration fortranCompilerConfiguration) {
         this.fortranCompilerConfiguration = fortranCompilerConfiguration;
     }
-    
+
     public synchronized FortranCompilerConfiguration getFortranCompilerConfiguration() {
         if (fortranCompilerConfiguration == null) {
-            fortranCompilerConfiguration = new FortranCompilerConfiguration(((MakeConfiguration)configuration).getBaseDir(), ((MakeConfiguration)configuration).getFortranCompilerConfiguration());
+            fortranCompilerConfiguration = new FortranCompilerConfiguration(((MakeConfiguration) configuration).getBaseDir(), ((MakeConfiguration) configuration).getFortranCompilerConfiguration());
         }
         return fortranCompilerConfiguration;
     }
-    
+
+    // Assembler
+    public void setAssemblerConfiguration(AssemblerConfiguration assemblerConfiguration) {
+        this.assemblerConfiguration = assemblerConfiguration;
+    }
+
+    public synchronized AssemblerConfiguration getAssemblerConfiguration() {
+        if (assemblerConfiguration == null) {
+            assemblerConfiguration = new AssemblerConfiguration(((MakeConfiguration) configuration).getBaseDir(), ((MakeConfiguration) configuration).getAssemblerConfiguration());
+        }
+        return assemblerConfiguration;
+    }
+
     // interface ConfigurationAuxObject
     public boolean shared() {
         return true;
     }
-    
+
     // interface ConfigurationAuxObject
     public boolean hasChanged() {
         return needSave;
     }
-    
+
     // interface ProfileAuxObject
     public void clearChanged() {
         needSave = false;
     }
-    
+
     /**
      * Returns an unique id (String) used to retrive this object from the
      * pool of aux objects
@@ -260,49 +275,50 @@ public class ItemConfiguration implements ConfigurationAuxObject {
 //    static public String getId(String path) {
 //        return "item-" + path; // NOI18N
 //    }
-    
     public String getId() {
         return item.getId();
     }
-    
+
     public void assign(ConfigurationAuxObject profileAuxObject) {
         if (!(profileAuxObject instanceof ItemConfiguration)) {
             // FIXUP: exception ????
             System.err.println("Item - assign: Profile object type expected - got " + profileAuxObject); // NOI18N
             return;
         }
-        ItemConfiguration i = (ItemConfiguration)profileAuxObject;
-        if (!getId().equals(i.getItem().getId())){
-            System.err.println("Item - assign: Item ID "+getId()+" expected - got " + i.getItem().getId()); // NOI18N
+        ItemConfiguration i = (ItemConfiguration) profileAuxObject;
+        if (!getId().equals(i.getItem().getId())) {
+            System.err.println("Item - assign: Item ID " + getId() + " expected - got " + i.getItem().getId()); // NOI18N
             return;
         }
         setConfiguration(i.getConfiguration());
         setItem(i.getItem());
         getExcluded().assign(i.getExcluded());
         setTool(i.getTool());
-        
+
         getCustomToolConfiguration().assign(i.getCustomToolConfiguration());
         getCCompilerConfiguration().assign(i.getCCompilerConfiguration());
         getCCCompilerConfiguration().assign(i.getCCCompilerConfiguration());
         getFortranCompilerConfiguration().assign(i.getFortranCompilerConfiguration());
+        getAssemblerConfiguration().assign(i.getAssemblerConfiguration());
     }
-    
+
     public void assignValues(ConfigurationAuxObject profileAuxObject) {
         if (!(profileAuxObject instanceof ItemConfiguration)) {
             // FIXUP: exception ????
             System.err.println("Item - assign: Profile object type expected - got " + profileAuxObject); // NOI18N
             return;
         }
-        ItemConfiguration i = (ItemConfiguration)profileAuxObject;
+        ItemConfiguration i = (ItemConfiguration) profileAuxObject;
         getExcluded().assign(i.getExcluded());
         setTool(i.getTool());
-        
+
         getCustomToolConfiguration().assign(i.getCustomToolConfiguration());
         getCCompilerConfiguration().assign(i.getCCompilerConfiguration());
         getCCCompilerConfiguration().assign(i.getCCCompilerConfiguration());
         getFortranCompilerConfiguration().assign(i.getFortranCompilerConfiguration());
+        getAssemblerConfiguration().assign(i.getAssemblerConfiguration());
     }
-    
+
     public ItemConfiguration copy(MakeConfiguration makeConfiguration) {
         ItemConfiguration copy = new ItemConfiguration(makeConfiguration, getItem());
         // safe using
@@ -310,45 +326,46 @@ public class ItemConfiguration implements ConfigurationAuxObject {
         copy.setConfiguration(makeConfiguration);
         return copy;
     }
-    
+
     @Override
     public Object clone() {
         ItemConfiguration i = new ItemConfiguration(getConfiguration(), getItem());
-        
-        i.setExcluded((BooleanConfiguration)getExcluded().clone());
+
+        i.setExcluded((BooleanConfiguration) getExcluded().clone());
         i.setTool(getTool());
 
-        i.setCustomToolConfiguration((CustomToolConfiguration)getCustomToolConfiguration().clone());
-        i.setCCompilerConfiguration((CCompilerConfiguration)getCCompilerConfiguration().clone());
-        i.setCCCompilerConfiguration((CCCompilerConfiguration)getCCCompilerConfiguration().clone());
-        i.setFortranCompilerConfiguration((FortranCompilerConfiguration)getFortranCompilerConfiguration().clone());
+        i.setCustomToolConfiguration((CustomToolConfiguration) getCustomToolConfiguration().clone());
+        i.setCCompilerConfiguration((CCompilerConfiguration) getCCompilerConfiguration().clone());
+        i.setCCCompilerConfiguration((CCCompilerConfiguration) getCCCompilerConfiguration().clone());
+        i.setFortranCompilerConfiguration((FortranCompilerConfiguration) getFortranCompilerConfiguration().clone());
+        i.setAssemblerConfiguration((AssemblerConfiguration) getAssemblerConfiguration().clone());
         return i;
     }
-    
+
     //
     // XML codec support
     public XMLDecoder getXMLDecoder() {
         return new ItemXMLCodec(this);
     }
-    
+
     public XMLEncoder getXMLEncoder() {
         return new ItemXMLCodec(this);
     }
-    
+
     public void initialize() {
         // FIXUP: this doesn't make sense...
     }
-    
+
     public Sheet getGeneralSheet() {
         Sheet sheet = new Sheet();
-        
+
         Sheet.Set set = new Sheet.Set();
         set.setName("Item"); // NOI18N
         set.setDisplayName(getString("ItemTxt"));
         set.setShortDescription(getString("ItemHint"));
         set.put(new StringRONodeProp(getString("NameTxt"), IpeUtils.getBaseName(item.getPath())));
         set.put(new StringRONodeProp(getString("FilePathTxt"), item.getPath()));
-        String fullPath = IpeUtils.toAbsolutePath(((MakeConfiguration)configuration).getBaseDir(), item.getPath());
+        String fullPath = IpeUtils.toAbsolutePath(((MakeConfiguration) configuration).getBaseDir(), item.getPath());
         String mdate = ""; // NOI18N
         File itemFile = new File(fullPath);
         if (itemFile.exists()) {
@@ -358,104 +375,106 @@ public class ItemConfiguration implements ConfigurationAuxObject {
         set.put(new StringRONodeProp(getString("FullFilePathTxt"), fullPath));
         set.put(new StringRONodeProp(getString("LastModifiedTxt"), mdate));
         sheet.put(set);
-        
+
         set = new Sheet.Set();
         set.setName("ItemConfiguration"); // NOI18N
         set.setDisplayName(getString("ItemConfigurationTxt"));
         set.setShortDescription(getString("ItemConfigurationHint"));
         if ((getConfiguration() instanceof MakeConfiguration) &&
-            ((MakeConfiguration)getConfiguration()).isMakefileConfiguration()){
+                ((MakeConfiguration) getConfiguration()).isMakefileConfiguration()) {
             set.put(new BooleanNodeProp(getExcluded(), true, "ExcludedFromBuild", getString("ExcludedFromCodeAssistanceTxt"), getString("ExcludedFromCodeAssistanceHint"))); // NOI18N
         } else {
             set.put(new BooleanNodeProp(getExcluded(), true, "ExcludedFromBuild", getString("ExcludedFromBuildTxt"), getString("ExcludedFromBuildHint"))); // NOI18N
         }
         set.put(new ToolNodeProp());
         sheet.put(set);
-        
+
         return sheet;
     }
-    
+
     private class ToolNodeProp extends Node.Property {
+
         public ToolNodeProp() {
             super(Integer.class);
         }
-        
+
         @Override
         public String getName() {
             return getString("ToolTxt1");
         }
-        
+
         public Object getValue() {
-            return new Integer(getTool());
+            return Integer.valueOf(getTool());
         }
-        
+
         public void setValue(Object v) {
-            String newTool = (String)v;
+            String newTool = (String) v;
             setTool(newTool);
         }
-        
+
         public boolean canWrite() {
             return true;
         }
-        
+
         public boolean canRead() {
             return true;
         }
-        
+
         @Override
         public PropertyEditor getPropertyEditor() {
             return new ToolEditor();
         }
     }
-    
+
     private class ToolEditor extends PropertyEditorSupport {
-        
+
         @Override
         public String getJavaInitializationString() {
             return getAsText();
         }
-        
+
         @Override
         public String getAsText() {
-            int val = ((Integer)getValue()).intValue();
+            int val = ((Integer) getValue()).intValue();
             return Tool.getName(val);
 //            CompilerSet set = CompilerSetManager.getDefault(((MakeConfiguration)configuration).getDevelopmentHost().getName()).getCompilerSet(((MakeConfiguration)configuration).getCompilerSet().getValue());
 //            return set.getTool(val).getGenericName();
         }
-        
+
         @Override
         public void setAsText(String text) throws java.lang.IllegalArgumentException {
             setValue(text);
         }
-        
+
         @Override
         public String[] getTags() {
             return getToolNames();
         }
     }
-    
-    private class StringRONodeProp extends PropertySupport {
+
+    private static class StringRONodeProp extends PropertySupport {
+
         String value;
+
         public StringRONodeProp(String name, String value) {
             super(name, String.class, name, name, true, false);
             this.value = value;
         }
-        
+
         public Object getValue() {
             return value;
         }
-        
+
         public void setValue(Object v) {
         }
     }
-    
-    
+
     @Override
     public String toString() {
         return getItem().getPath();
     }
-    
     private static ResourceBundle bundle = null;
+
     private static String getString(String s) {
         if (bundle == null) {
             bundle = NbBundle.getBundle(ItemConfiguration.class);
