@@ -336,7 +336,7 @@ public class PackagingConfiguration {
         
         @Override
         public Object getValue() {
-            return new Integer(PackagerManager.getDefault().getNameIndex(getType().getValue()));
+            return Integer.valueOf(PackagerManager.getDefault().getNameIndex(getType().getValue()));
         }
     
         @Override
@@ -456,7 +456,7 @@ public class PackagingConfiguration {
         return packager.getDefaultOptions();
     }
 
-    private class OutputNodeProp extends StringNodeProp {
+    private static class OutputNodeProp extends StringNodeProp {
 
         public OutputNodeProp(StringConfiguration stringConfiguration, String def, String txt1, String txt2, String txt3) {
             super(stringConfiguration, def, txt1, txt2, txt3);
